# deal-pages-watcher

./: config.yaml  pyproject.toml
.github/workflows/: cron.yaml
deal_pages_watcher/: annotation_service.py  config.py  constants.py  main.py
deal_pages_watcher/api_clients/: base.py
deal_pages_watcher/api_clients/alerts/: interface.py  telegram.py
deal_pages_watcher/db/: core.py  models.py  query.py
deal_pages_watcher/scrapping/: deals.py
deal_pages_watcher/utils/: number_utils.py
